# GutenAIR-gtk4

./: Cargo.toml  README.md  com.gutenair.gtk4.gschema.xml  gschemas.compiled
.cargo/: config.toml
docs/: book.toml
docs/src/: SUMMARY.md  arquitectura.md  desarrollo.md  ejecucion.md  exportacion.md  ia-ollama.md  instalacion.md  introduccion.md  panel-lateral.md  panel-principal.md  pendientes.md  proyectos-epub.md  troubleshooting.md  uso.md
src/: app.rs  book.rs  constants.rs  editor.rs  export.rs  i18n.rs  main.rs  nav.rs  preferences.rs  prelude.rs  reports.rs  resources.rs  sidebar.rs  state.rs  ui.rs  validation.rs
