[package]
name = "gutenair-gtk4"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { package = "gtk4", version = "0.11" }
adw = { package = "libadwaita", version = "0.9", features = ["v1_6"] }
glib = "0.22"
gdk-pixbuf = "0.22"
gutencore = { path = "../GutenAIR" }
zip = "0.6"
webkit6 = "0.6"
sourceview5 = "0.11"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
